# pas.plugins.ldap

./: .coveragerc  .gitignore  .travis.yml  CHANGES.md  CHANGES.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  HISTORY.rst  LICENSE.md  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  README.txt  README_MAKE.md  RELEASE.md  TODO.md  TODO.org  TODO.rst  base-5.2.x.cfg  base.cfg  bootstrap-4.3.x.sh  bootstrap-5.0.x.sh  bootstrap-5.1.x.sh  bootstrap-5.2.x.sh  build_ldap.sh  buildout-4.3.x.cfg  buildout-5.1.x.cfg  buildout-5.2.x.cfg  buildout-plone4.cfg  buildout.cfg  constraints.txt  coredev-5.2.cfg  dev.cfg  hatch_build.py  instance.yaml  ldap.cfg  mx.ini  plone-4.3.x.cfg  (+12 more)
.github/: FUNDING.yml
.github/workflows/: ci.yaml  qa.yaml  release.yaml  tests.yaml
patches/: getpeereid.patch
src/Products/PASGroupsFromLDAP/: README.txt  configure.zcml  exportimport.py  setuphandlers.py
src/Products/PASGroupsFromLDAP/profile/: import_steps.xml  metadata.xml
src/Products/PASGroupsFromLDAP/tests/: test_doctests.py
src/bda/pasldap/: __init__.py  _plugin.py  _plugin.rst  _plugin.txt  configure.zcml  exportimport.py  profiles.zcml  setuphandlers.py  sheet.py  testing.py  tests.py  utils.py
src/bda/pasldap/docs/: propertiesplugin.txt
src/bda/pasldap/profile/: import_steps.xml  metadata.xml
src/bda/pasldap/tests/: __init__.py  test_doctests.py
src/bda/pasldap/www/: addGroupsFromLDAPMultiPlugin.zpt  addLDAPPlugin.zpt  manage_base_dns.zpt
src/pas/: __init__.py
src/pas/plugins/ldap/: __init__.py  _plugin.py  _plugin.rst  cache.py  cache.rst  cache_volatile.zcml  configure.zcml  defaults.py  interfaces.py  monkey.py  patches.py  plugin.py  plugin.rst  properties.py  properties.rst  properties.yaml  setuphandlers.py  sheet.py  testing.py  tests.py
src/pas/plugins/ldap/docs/: __init__.py
src/pas/plugins/ldap/locales/: __main__.py  merge-lingua.pot  pas.plugins.ldap.pot
src/pas/plugins/ldap/locales/en/LC_MESSAGES/: pas.plugins.ldap.po
src/pas/plugins/ldap/locales/es/LC_MESSAGES/: pas.plugins.ldap.po
src/pas/plugins/ldap/plone/: configure.zcml  controlpanel.py  controlpanel.yaml
src/pas/plugins/ldap/plone/profile/: jsregistry.xml  metadata.xml
src/pas/plugins/ldap/plone/tests/: functional.txt  integration-pasldap.txt  ldap-integration-testing.zcml
src/pas/plugins/ldap/plonecontrolpanel/: __init__.py  cache.py  configure.zcml  controlpanel.pt  controlpanel.py  exportimport.py  inspector.pt  inspector.py  setuphandlers.py  upgrades.py
src/pas/plugins/ldap/plonecontrolpanel/profile/: controlpanel.xml  cssregistry.xml  jsregistry.xml  ldapsettings.xml  metadata.xml  propertiestool.xml
src/pas/plugins/ldap/plonecontrolpanel/profiles/base/: componentregistry.xml  ldapsettings.xml
src/pas/plugins/ldap/plonecontrolpanel/profiles/default/: componentregistry.xml  controlpanel.xml  ldapsettings.xml  metadata.xml  registry.xml
src/pas/plugins/ldap/plonecontrolpanel/profiles/plone4/: controlpanel.xml  metadata.xml
src/pas/plugins/ldap/plonecontrolpanel/profiles/plone5/: controlpanel.xml  metadata.xml  registry.xml
src/pas/plugins/ldap/plonecontrolpanel/profiles/uninstall/: controlpanel.xml  registry.xml
src/pas/plugins/ldap/plonecontrolpanel/profiles/yafowil/: registry.xml
src/pas/plugins/ldap/profile/: import_steps.xml  metadata.xml
src/pas/plugins/ldap/tests/: __init__.py  test_doctests.py  test_plugin.py  test_setup.py
src/pas/plugins/ldap/zmi/: add_plugin.pt  configure.zcml  manage_plugin.pt  manage_plugin.py  propertiesform.py
testenv/: data.ldif  principals.ldif
tests/: conftest.py  test_cache.py  test_doctests.py  test_monkey_unit.py  test_plonecontrolpanel.py  test_plugin.py  test_plugin_unit.py  test_properties_unit.py  test_setuphandlers_unit.py  test_sheet_unit.py  testing.py
