[project]
name = "pas.plugins.ldap"
version = "2.0.0.dev0"
description = "LDAP/AD Plugin for Plone/Zope PluggableAuthService (users+groups)"
readme = "README.rst"
license = { text = "GPL 2.0" }
authors = [{ name = "BlueDynamics Alliance", email = "dev@bluedynamics.com" }]
keywords = [
    "authentication",
    "groups",
    "ldap",
    "pas",
    "plone",
    "plugin",
    "users",
    "zope",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Plone",
    "Framework :: Plone :: 6.2",
    "Framework :: Plone :: Addon",
    "Framework :: Zope",
    "Framework :: Zope :: 5",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
]
dependencies = [
    "bda.cache",
    "five.globalrequest",
    "node.ext.ldap>=2.0.0",
    "odict",
    "plone.api",
    "plone.registry",
    "Products.CMFCore",
    "Products.GenericSetup",
    "Products.PlonePAS",
    "Products.PluggableAuthService",
    "Products.statusmessages",
    "python-ldap>=3.4.0",
    "setuptools",
    "yafowil.plone>=6.0.0",
    "yafowil.widget.array>=2.0.0",
    "yafowil.widget.dict>=2.0.0",
    "yafowil.yaml",
    "zope.globalrequest",
    "Zope>=5",
]

[project.optional-dependencies]
plone = ["Products.CMFPlone"]
test = ["plone.testing", "pytest-plone"]

[project.entry-points."z3c.autoinclude.plugin"]
target = "plone"

[project.urls]
ChangeLog = "https://github.com/collective/pas.plugins.ldap/blob/master/CHANGES.rst"
Homepage = "https://github.com/collective/pas.plugins.ldap/"
"Issue Tracker" = "https://github.com/collective/pas.plugins.ldap/issues"
"Source Code" = "https://github.com/collective/pas.plugins.ldap"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pas"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.isort]
profile = "plone"

