[project]
name = "pas.plugins.ldap"
dynamic = ["version"]
description = "LDAP/AD Plugin for Plone/Zope PluggableAuthService (users+groups)"
readme = "README.md"
license = { text = "GPL 2.0" }
authors = [{ name = "BlueDynamics Alliance", email = "dev@bluedynamics.com" }]
keywords = [
    "authentication",
    "groups",
    "ldap",
    "pas",
    "plone",
    "plugin",
    "users",
    "zope",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Plone",
    "Framework :: Plone :: 6.0",
    "Framework :: Plone :: 6.1",
    "Framework :: Plone :: 6.2",
    "Framework :: Plone :: Addon",
    "Framework :: Zope",
    "Framework :: Zope :: 5",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
]
dependencies = [
    "bda.cache",
    "node.ext.ldap>=2.0.0",
    "odict",
    "plone.api",
    "plone.registry",
    "Products.CMFCore",
    "Products.GenericSetup",
    "Products.PlonePAS",
    "Products.PluggableAuthService",
    "Products.statusmessages",
    "python-ldap>=3.4.0",
    "yafowil.plone>=6.0.0",
    "yafowil.widget.array>=2.0.0",
    "yafowil.widget.dict>=2.0.0",
    "yafowil.yaml",
    "zope.globalrequest",
    "Zope>=5",
]

[project.optional-dependencies]
plone = ["Products.CMFPlone"]
test = ["plone.testing", "pytest-plone"]

[project.entry-points."z3c.autoinclude.plugin"]
target = "plone"

[project.urls]
ChangeLog = "https://github.com/collective/pas.plugins.ldap/blob/main/CHANGES.md"
Homepage = "https://github.com/collective/pas.plugins.ldap/"
"Issue Tracker" = "https://github.com/collective/pas.plugins.ldap/issues"
"Source Code" = "https://github.com/collective/pas.plugins.ldap"

[build-system]
requires = ["hatchling", "hatch-vcs", "babel"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pas"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "RUF",
    "SIM",
    "T20",
    "UP",
    "W",
]
ignore = [
    "E501",
    "RUF001",
    "RUF002",
    # Zope/Plone idioms: builtins like ``id``/``type``/``property`` are
    # pervasive as parameter and variable names in the PAS/CMF APIs.
    "A001",
    "A002",
    "A003",
    # Persistent / Acquisition classes use plain mutable class attributes
    # (security declarations, property lists) and not ``typing.ClassVar``.
    "RUF012",
]

[tool.ruff.lint.isort]
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1
no-sections = true
order-by-type = false

[tool.ruff.lint.pycodestyle]
max-line-length = 120
max-doc-length = 120

[tool.ruff.lint.per-file-ignores]
# Tests use print() for diagnostics and deliberately nested ``with patch(...)``
# blocks for readability of layered mocks.
"tests/*" = ["T20", "SIM117"]

