[metadata]
name = pas.plugins.ldap
version=2.0.0.dev0
description=LDAP/AD Plugin for Plone/Zope PluggableAuthService (users+groups)
long_description = file: README.rst, CHANGES.rst
keywords = zope pas plone ldap authentication plugin users groups
author = BlueDynamics Alliance
author_email = dev@bluedynamics.com
license = GPLv2
license_files = LICENSE.rst
url = https://github.com/collective/pas.plugins.ldap/
project_urls =
    ChangeLog = https://github.com/collective/pas.plugins.ldap/blob/master/CHANGES.rst
    Issue Tracker = https://github.com/collective/pas.plugins.ldap/issues
    Source Code = https://github.com/collective/pas.plugins.ldap
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Plone :: 6.0
    Framework :: Plone :: Addon
    Framework :: Plone
    Framework :: Zope :: 5
    Framework :: Zope
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP
    Programming Language :: Python

[options]
setup_requires = setuptools
install_requires =
    bda.cache
    five.globalrequest
    node.ext.ldap>=1.0rc1
    odict
    plone.registry
    Products.CMFCore
    Products.GenericSetup
    Products.PlonePAS
    Products.PluggableAuthService
    Products.statusmessages
    python-ldap>=3.4.0
    setuptools
    yafowil.plone>=4.0.0a3
    yafowil.widget.array
    yafowil.widget.dict
    yafowil.yaml
    zope.globalrequest
    Zope>=5

include_package_data = True
zip_safe = False
namespace_packages =
    pas
    pas.plugins

package_dir =
    = src
packages = find:

[options.packages.find]
where =
    src

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone

[options.extras_require]
test =
    plone.testing

plone =
    Products.CMFPlone

[isort]
profile = black
force_alphabetical_sort=True
force_single_line = True
lines_after_imports = 2

[zest.releaser]
create-wheel = yes
